frontend/test/should_fail/index_exec_node_isInFromIndexSame_candidate_mismatch.grg
#using "index_exec_model.gm"

sequence s(e:E, i:set<Node>, j:int)
{
	{ i=isInNodesFromIndexSame(e, fooi, j) }
}
